유니버셜쿼리 페이지 추가, 기존 브라우저 가독성 개선

--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -6,10 +6,17 @@
         .cell-width {
             width: 800px;
         }
+        .font {
+            font-size: 20px;
+        }
+        a, a:visited {
+            color: blue;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
-<h1>Resource Details</h1>
+<h1 th:text="${resourceURI}"></h1>
 
 <table border="1">
     <thead>
@@ -21,7 +28,7 @@
     <tbody>
     <th:block th:each="entry, stat : ${resourceInfo}" th:with="prev=${stat.index > 0 ? resourceInfo[stat.index - 1] : null}">
         <!-- 만약 현재 항목의 첫 번째 원소와 이전 항목의 첫 번째 원소가 다르면 새로운 행을 시작합니다. -->
-        <tr th:if="${prev == null || entry[0] != prev[0]}">
+        <tr class="font" th:if="${prev == null || entry[0] != prev[0]}">
             <td class="cell-width" th:text="${entry[0]}" th:rowspan="${entry[3]}"></td>
             <td class="cell-width">
                 <!-- 만약 2번째 인덱스의 값이 "x"가 아닌 경우 하이퍼링크로 표시합니다. -->
@@ -32,10 +39,10 @@
             </td>
         </tr>
         <!-- 만약 현재 항목의 첫 번째 원소와 이전 항목의 첫 번째 원소가 같으면 Value만 표시하는 새로운 행을 추가합니다. -->
-        <tr th:if="${prev != null && entry[0] == prev[0]}">
+        <tr class="font" th:if="${prev != null && entry[0] == prev[0]}">
             <td class="cell-width">
-                <a th:if="${entry[2] != 'x'}" th:href="@{'/browse/' + ${entry[2]}}" th:text="${entry[1]}"></a>
-                <span th:if="${entry[2] == 'x'}" th:text="${entry[1]}"></span>
+                <a class="font" th:if="${entry[2] != 'x'}" th:href="@{'/browse/' + ${entry[2]}}" th:text="${entry[1]}"></a>
+                <span class="font" th:if="${entry[2] == 'x'}" th:text="${entry[1]}"></span>
             </td>
         </tr>
     </th:block>
