시간 추가 및 임의적 실험 질의문 추가

--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -19,7 +19,9 @@
     </style>
 </head>
 <body>
-<h1 th:text="${resourceURI}"></h1>
+
+<h3 th:text="|Execution time: ${executionTime0}ms and ${executionTime1}ms|"></h3>
+<h2 th:text="${resourceURI}"></h2>
 
 <table border="1">
     <thead>
