--- a/src/main/resources/templates/browseProperty.html
+++ b/src/main/resources/templates/browseProperty.html
@@ -20,7 +20,8 @@
 </head>
 <body>
 
-<h1 th:text="${resourceURI}"></h1>
+<h3 th:text="Execution time: ${executionTime}ms"></h3>
+<h2 th:text="${resourceURI}"></h2>
 
 <table border="1">
     <thead>
