--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Boot Web</title>
+    <title>Jena Result</title>
 </head>
 <body>
-    <h1 th:text="${message}"></h1>
+    <h2 th:utext="${message}"></h2>
 </body>
 </html>
